pay section mobile adaptation fixed

--- a/css/option-pay.css
+++ b/css/option-pay.css
@@ -49,7 +49,7 @@
 @media (max-width: 1000px) {
   .option-pay_picture_wrapper {
     min-height: 73px;
-    padding: 18px;
+    padding: 0;
     margin-bottom: 10px;
   }
 
@@ -63,6 +63,15 @@
 }
 
 @media (max-width: 580px) {
+  .option-pay_picture_wrapper {
+    min-height: 51px;
+    padding-top: 0;
+    padding-right: 0;
+    padding-left: 0;
+    padding-bottom: 0;
+    margin-bottom: 10px;
+  }
+
   .option-pay_title {
     font-size: 14px;
   }
