--- a/css/pay.css
+++ b/css/pay.css
@@ -4,6 +4,12 @@
   color: var(--main-color);
 }
 
+.pay_container {
+  max-width: 1374px;
+  margin: 0 auto;
+  padding: 0 42px;
+}
+
 .pay_title {
   font-weight: 700;
   font-size: 70px;
@@ -73,8 +79,12 @@
 }
 
 @media (max-width: 580px) {
+  .pay_container {
+    padding: 0 1px;
+  }
+
   .pay_title {
     font-size: 28px;
-    text-align: center;
+    padding-left: 15px;
   }
 }
